name:                adventofcode2017
version:             0.1.0.0
synopsis:            2017 Advent of code solutions
-- description:
homepage:            https://github.com/xintron/adventofcode2017#readme
license:             BSD3
license-file:        LICENSE
author:              Marcus Carlsson
maintainer:          carlsson.marcus@gmail.com
copyright:           2017 Marcus Carlsson
category:            Other
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day1
  hs-source-dirs:      src
  main-is:             Day1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable day2
  hs-source-dirs:      src
  main-is:             Day2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec

executable day3
  hs-source-dirs:      src
  main-is:             Day3.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable day4
  hs-source-dirs:      src
  main-is:             Day4.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec